@@ -4285,12 +4285,12 @@ the slot is created with <literal>sigc::mem_fun()</literal> (for a member method
 </para>
 
 <para>
-A little (and somewhat dirty) example follows.  To use
-the example just execute it from a terminal; it doesn't create a
-window.  It will create a pipe named <literal>testpipe</literal> in the current
-directory. Then start another shell and execute <literal>cat
-&#62;testpipe</literal>. The example will print each line you enter until you
-type <literal>quit</literal>.
+A little example follows.  To use the example just execute it from a terminal;
+it doesn't create a window.  It will create a pipe named 
+<literal>testfifo</literal> in the current directory. Then start another shell
+and execute <literal>echo "Hello" &#62; testfifo</literal>. The example will 
+print each line you enter until you execute <literal>echo "Q" &#62; 
+testfifo</literal>.
 </para>
 
 <para><ulink url="&url_examples_base;input/">Source Code</ulink></para>
