@@ -1,3 +1,8 @@
+005-03-12  Claudio Saavedra <csaavedra@alumnos.utalca.cl>
+ 
+ 	* docs/tutorial/gtkmm-tut.xml: Fixing inconsistences in documentation.
+ 	Bug #170131.
+
 2005-03-13  Murray Cumming <murrayc@murrayc.com>
 
 	* gtk/src/cellrenderercombo.hg:
